--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   
 <center>
-<p class="profe">pagina confiable</p>
+<p class="profe">Calculadora para sumar</p>
 </center>
 <p class="profe">calculadora</p>
 
