--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Mi primer p&aacute;gina</title>
+    <title>Mi p&aacute;gina</title>
    <style>
        .profe {
            font-family: Verdana, Geneva, Tahoma, sans-serif;
